--- a/1-5.md
+++ b/1-5.md
@@ -1,19 +1,19 @@
 ### Статья 1
 
-Время моего коллеги не менее ценно, чем мое
+Время моего коллеги не менее ценно, чем мое.
 
 ### Статья 2
 
-Если ты "тащишь" в команде один, то тебе пора сменить команду (то есть найди братанов)
+Если ты "тащишь" в команде один, то тебе пора сменить команду (то есть найди братанов).
 
 ### Статья 3
 
-Команда выше задач, задачи нужно распределять по-честному
+Команда выше задач, задачи нужно распределять по-честному.
 
 ### Статья 4
 
-Я внимательно изучил документацию и FAQ, прежде чем задать вопрос коллеге
+Я внимательно изучил документацию и FAQ, прежде чем задать вопрос коллеге.
 
 ### Статья 5
 
-Если видишь 2 хорошие таски - возьми одну себе, другую забей братану
+Если видишь 2 хорошие таски - возьми одну себе, другую забей братану.
